Add shared partial, a helper to deterine the id and table name and a spec to ensure both tables exist on the page

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,11 +4,7 @@
   </head>
   <body>
     <h1>Orders</h1>
-
-    <ul>
-    <% @orders.each do |order| %>
-      <li><%= link_to order.id, order_path(order) %></li>
-    <% end %>
-    </ul>
+    <%= render partial: 'orders_table', locals: {orders: @orders.shipped, shipped: true} %>
+    <%= render partial: 'orders_table', locals: {orders: @orders.unshipped, shipped: false} %>
   </body>
 </html>
