--- a/app/views/line_items/_form.html.erb
+++ b/app/views/line_items/_form.html.erb
@@ -1,4 +1,4 @@
-<tr class="line_item_form">
+<tr class="line_item_form" id="<%= line_items_row_id(_form.object) %>">
 
   <td>
     <%= _form.select :widget_id, options_for_select(Widget.select_options, _form.object.widget_id), {prompt: t('line_items.widget_prompt'), selected: :widget_id } %>
@@ -12,5 +12,7 @@
     <%= _form.number_field :unit_price, min: 1, required: true %>  
   </td>
 
-  <td><%= link_to 'x', '#', class: "remove_new_line_item" %></td>
+  <td>
+    <%= line_items_removal_link(_form.object) %>    
+    </td>
 </tr>
