--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsCodeChallenge</title>
+    <title><%= content_for?(:title) ? yield(:title) : "RailsCodeChallenge" %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
