--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,18 @@
     <%= csp_meta_tag %>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    
     <%= stylesheet_link_tag    'application', media: 'all' %>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+    <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
     <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
-    <%= yield %>
-
+    <div class="container">
+      <%= yield %>
+    </div>
     <%= yield(:script) %>
   </body>
 </html>
