Account for invalid status save

--- a/app/views/orders/update_settings.js.erb
+++ b/app/views/orders/update_settings.js.erb
@@ -1,1 +1,5 @@
-$('#setting_toggle_container').html("<%= j render partial: 'orders/setting_statuses', locals: { order: @order } %>")
+<% if @successful_save %>
+  $('#setting_toggle_container').html("<%= j render partial: 'orders/setting_statuses', locals: { order: @order } %>")
+<% else %>
+  alert('<%= t('orders.invalid_setting') %>')
+<% end %>
